--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,25 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+		/>
 		<title>Comment app</title>
 	</head>
 	<body>
-		<h1>Hello from Comment app.</h1>
+		<div class="container my-4">
+			<h1>Comments</h1>
+			<div class="mt-4">
+				<% comments.forEach(comment => { %>
+				<div class="card mb-3">
+					<div class="card-body">
+						<h5 class="card-title"><%= comment.username %></h5>
+						<p class="card-text"><%= comment.comment %></p>
+					</div>
+				</div>
+				<% }); %>
+			</div>
+		</div>
 	</body>
 </html>
