--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,15 +3,17 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-		/>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 		<title>Comment app</title>
 	</head>
 	<body>
 		<div class="container my-4">
-			<h1>Comments</h1>
+			<div class="d-flex justify-content-between align-items-center">
+				<h1>Comments</h1>
+				<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addCommentModal">
+					Add Comment
+				</button>
+			</div>
 			<div class="mt-4">
 				<% comments.forEach(comment => { %>
 				<div class="card mb-3">
@@ -23,5 +25,9 @@
 				<% }); %>
 			</div>
 		</div>
+
+		<%- include('addCommentModal') %>
+
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 	</body>
 </html>
