--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,9 +17,14 @@
 			<div class="mt-4">
 				<% comments.forEach(comment => { %>
 				<div class="card mb-3">
-					<div class="card-body">
-						<h5 class="card-title"><%= comment.username %></h5>
-						<p class="card-text"><%= comment.comment %></p>
+					<div class="card-body d-flex justify-content-between align-items-center">
+						<div>
+							<h5 class="card-title"><%= comment.username %></h5>
+							<p class="card-text"><%= comment.comment %></p>
+						</div>
+						<form action="/delete/<%= comment.id %>" method="post" class="d-inline">
+							<button type="submit" class="btn btn-danger">Delete</button>
+						</form>
 					</div>
 				</div>
 				<% }); %>
