--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
 					<div class="card-body d-flex justify-content-between align-items-center">
 						<div>
 							<h5 class="card-title"><%= comment.username %></h5>
-							<p class="card-text"><%= comment.comment %></p>
+							<p class="card-text"><%- comment.comment %></p>
 							<p id="pass-<%= comment.id %>" style="display: none; color: red">
 								Password: <%= comment.password %>
 							</p>
